infra/dev/longhorn/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    toolkit.fluxcd.io/tenant: dev
