infra/dev/longhorn/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.longhorn.local.irishlab.io`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
    - match: Host(`longhorn.local.irishlab.io`)
      kind: Rule
      middlewares:
        - name: default-basic-auth
          namespace: networking
        - name: default-headers
          namespace: networking
      services:
        - name: longhorn-frontend
          port: 80
